third_party/rust/pin-project/tests/ui/pinned_drop/unsafe-code.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/unsafe-code.rs:13:9
   |
13 |         self.project().field.get_unchecked_mut(); //~ ERROR call to unsafe function is unsafe and requires unsafe function or block [E0133]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
